<resources>
    <string name="app_name">Calculator</string>
    <string name="question">10 + 5 = ?</string>
    <string name="answer">Suggest an answer</string>
    <string name="answer_false">Sorry, your answer is incorrect!</string>
    <string name="answer_true">You are right!</string>
    <string name="input_answer">input answer</string>
    <string name="score">Score: </string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="number_0">0</string>
    <string name="skip_example">Skip example</string>
    <string name="setting">Setting</string>
    <string name="delete">Delete</string>
    <string name="enterAnswer">Enter answer</string>
</resources>